Fixed alignment between background icon and openlibrary covers

--- a/css/views-styles.css
+++ b/css/views-styles.css
@@ -325,7 +325,8 @@
 	width: 50px;
 	height: 75px;
 	margin: 5px;
-	padding: 5px;
+	/*causes alignment issues with open library cover rewrite
+	padding: 5px; */
 	text-align: center;
 	background: #F2F2F2 url(../images/default-image-S.png) no-repeat center center;
 }
@@ -414,7 +415,8 @@
 	width: 50px;
 	height: 75px;
 	margin: 5px;
-	padding: 5px;
+	/*causes alignment issues with open library cover rewrite
+	padding: 5px; */
 	text-align: center;
 	background: #F2F2F2 url(../images/default-image-S.png) no-repeat center center;
 }
